* #652: icmsStopSpammer causes blank page when the stopforumspam.org site is unavailable. (vaughan)
* #562 as part of 562, created new class icms.class.password.php, removed old password functions from functions.php (vaughan)
* Updated Protector module to 3.34 (Gijoe, Vaughan)
* #698: we are now using the default system editor to edit the content for blocks (Phoenyx)

'''Fixed'''
* fixed class/icmsform/icmsform.php 723-728 lines (????) (mekdrop)
* #249: Path to ICMS_IMAGES_SET_URL corrected (sato-san)
* #657: Icons for adsense, rating and mime-types (sato-san)
* #548: Errors with class/theme.php (TheRplima)
* #636: search in the frontend works not (TheRplima)
* #587: banners.php with fatal error (TheRplima)
* #603: Filter for custom blocks in blocksadmin (TheRplima)
* #640: Version checker blank page when version file is not available (skenow)
* #653: wrong url to edit a block in group manager (Phoenyx)
* #242: email address isn't marked as required in the user form | ticket from addons (Phoenyx)
* #167: Location shows a Google Maps locator image even if no location is provided | ticket from addons (Phoenyx)
* #241: Fatal error: Class 'ProfileControlerTribes' not found when creating a comment on a tribe | ticket from addons (Phoenyx)
* #244: login_name in edituser.php is always 'login_name' | ticket from addons (Phoenyx)
* #166: some strange values for "settings" | ticket from addons (Phoenyx)
* #243: missing values for selection on comment and notification options | ticket from addons (Phoenyx)
* #656: make sure filename length is no longer than 30 chars in case the prefix is set (Phoenyx)
* #660: corrected typo in class/uploader.php (Phoenyx)
* #659: image manager now creates index.html for new categories (Phoenyx)
* #250: password is now marked as required in the user form | ticket from addons (Phoenyx)
* #614: moved wording from search template to language file and reworked search results (Phoenyx)