@@ -26,14 +26,14 @@
 
 #icms-canvas-leftcolumn th, #icms-canvas-rightcolumn th {
 	background-color: #f3ac03;
-	color: #fff;
+	color: #000;
 	font-size: 90%;
 }
 
 /* ------ Center column content ------ */
 #icms-page th {
 	background-color: #f3ac03;
-	color: #fff;
+	color: #000;
 }
 
 #icms-page .icms-block {
